# 2026-Nerf_Sizing

./: README.md  pyproject.toml  requirements.txt
.mplconfig/: fontlist-v390.json
checkpoints/falcon_cglna/: final.pt
configs/: default.yaml  falcon_cglna_conversion.yaml  falcon_cglna_nerf.yaml  minimal.yaml
data/: falcon_cglna_train_data.npz
nerf_sizing/: __init__.py
nerf_sizing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nerf_sizing/data/: __init__.py  dataset.py  sampler.py  spice_interface.py
nerf_sizing/model/: __init__.py  circuit_field_net.py  positional_encoding.py
nerf_sizing/optimization/: __init__.py  design_loss.py  optimizer.py
nerf_sizing/training/: __init__.py  loss.py  trainer.py
nerf_sizing/utils/: __init__.py  config.py  normalization.py  visualization.py
outputs/: sweep_C1.csv  sweep_C1_Ld.csv  sweep_C2.csv  sweep_Ld.csv
scripts/: build_falcon_example.sh  build_falcon_gnn_demo.sh  build_minimal_example.sh  convert_falcon_to_nerf.py  generate_data.py  optimize.py  plot_sizing_sweep.py  plot_sizing_sweep_2d.py  run_falcon_example.ps1  train.py
tests/: test_integration.py  test_model.py  test_optimization.py  test_sampler.py  test_training.py
visualizer/: 3d.html  3d.js  app.js  index.html  style.css
